[project]
name = "visu-reborn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "ipython>=9.5.0",
    "livekit>=1.0.12",
    "livekit-agents[cartesia,openai,silero]>=1.2.8",
    "livekit-plugins-cartesia>=1.2.8",
    "livekit-plugins-deepgram>=1.2.8",
    "livekit-plugins-openai>=1.2.8",
    "livekit-plugins-silero>=1.2.8",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.36.0",
    "jinja2>=3.1.2",
    "pyserial>=3.5",
]
